<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Donate">

    <item
        android:id="@+id/menuReport"
        android:orderInCategory="100"
        android:title="@string/menuReport"
        app:showAsAction="never"
        android:onClick="report"/>

    <item
        android:id="@+id/menuEnter"
        android:orderInCategory="100"
        android:title="@string/menuEnter"
        app:showAsAction="never"
        android:onClick="enter"/>

    <item
        android:id="@+id/menuReset"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menuReset"
        android:onClick="reset"/>

    <item
        android:id="@+id/menuLogout"
        android:title="@string/menuLogout"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:onClick="logout"/>
</menu>